--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -12,6 +12,10 @@ on:
       token:
         description: 'Bearer token'
         required: true
+      academy-name:
+        description: 'Name of the Academy represented by this repo'
+        required: false
+        default: 'Academy'        
       version:
         description: 'Module version'
         required: false
@@ -23,10 +27,10 @@ jobs:
 
     steps:
       - name: Checkout site
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Setup Hugo Extended
-        uses: peaceiris/actions-hugo@v2
+        uses: peaceiris/actions-hugo@v3
         with:
           hugo-version: '0.147.9'
           extended: true
@@ -39,10 +43,11 @@ jobs:
 
       - name: Publish to layer5 academy
         id: academy
-        uses: layer5io/academy-build@v0.1.3
+        uses: layer5io/academy-build@v0.1.6
         with:
           orgId: ${{ github.event.inputs.orgId || secrets.ACADEMY_ORG_ID }}
           token: ${{ github.event.inputs.token || secrets.ACADEMY_TOKEN }}
+          academy-name: 'Academy'
           version: ${{ github.event.inputs.version != '' && github.event.inputs.version || github.ref_name }}
 
       - name: Show response
